Closed Bug 1831039 Opened 3 years ago Closed 3 years ago

Fix clearing of private file managers in FileManagerInfo::InvalidateAllFileManagers

Categories

(Core :: Storage: IndexedDB, defect, P2)

defect

Tracking

()

RESOLVED FIXED
114 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox112 --- unaffected
firefox113 --- unaffected
firefox114 --- fixed

People

(Reporter: janv, Assigned: janv)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

This is a copy and paste error. We take the length of mPrivateStorageFileManagers, but we try to iterate over mDefaultStorageFileManagers. See https://searchfox.org/mozilla-central/rev/e6cb503ac22402421186e7488d4250cc1c5fecab/dom/indexedDB/IndexedDatabaseManager.cpp#686-688

Set release status flags based on info from the regressing bug 1827377

Pushed by jvarga@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/37aede27e09d Fix clearing of private file managers in FileManagerInfo::InvalidateAllFileManagers; r=hsingh

Backed out along with Bug 1781201, Bug 1831046, Bug 1829814, Bug 1831040, Bug 1830887 (due to conflicts) for failures on test_upgrade_add_index.html.

Pushed by jvarga@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/53b9227f3231 Fix clearing of private file managers in FileManagerInfo::InvalidateAllFileManagers; r=hsingh
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: