Bug 1831039 - Fix clearing of private file managers in FileManagerInfo::InvalidateAllFileManagers; r=hsingh

Differential Revision: https://phabricator.services.mozilla.com/D176984